Add support section with donation button
Added a support section with a button to donate.

--- a/public/index.html
+++ b/public/index.html
@@ -262,6 +262,15 @@ canvas { display: block; cursor: crosshair; }
         </div>
     </div>
     <h3 id="lobby-status" style="color: #aaa; margin-top: 20px;"></h3>
+    <div style="margin-top: 40px; text-align: center; border-top: 1px solid #333; padding-top: 20px; width: 90%; max-width: 800px;">
+        <h4 style="color: #aaa; margin: 0 0 15px 0; font-weight: normal; letter-spacing: 1px;">Нравится игра? Поддержите разработчика! 🇺🇦</h4>
+        
+        <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
+            <button class="menu-btn" style="background: linear-gradient(45deg, #d35400, #e67e22); border: 1px solid #f39c12; color: #fff; min-width: 250px; padding: 10px 20px; font-size: 1.1em; border-radius: 8px; font-weight: bold; box-shadow: 0 0 15px rgba(243, 156, 18, 0.3);" onclick="window.open('https://donatello.to/iron-tactics', '_blank')">
+                🍩 ПОДДЕРЖАТЬ ПРОЕКТ
+            </button>
+        </div>
+    </div>
 </div>
 
 <div id="lobby-screen" class="screen clickable hidden">
